--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,20 @@
 /* You can add global styles to this file, and also import other style files */
+app-root {
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+}
+body {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+app-login {
+  flex-grow: 1;
+  display: flex;
+}
