--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -3,5 +3,7 @@ main {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  padding: 50px;
+  background-color: white;
+  border-radius: 20px;
+  border: 1px solid transparent;
 }
