--- a/src/app/components/form-input/form-input.component.html
+++ b/src/app/components/form-input/form-input.component.html
@@ -1,11 +1,14 @@
 <ng-container [formGroup]="form">
-  <!-- <div class="form-control"> -->
-  <label class="form-control__label">{{ label }}</label>
-  <input
-    class="form-control__input"
-    [type]="type"
-    [placeholder]="palceholder"
-    [formControlName]="formControlName"
-  />
-  <!-- </div> -->
+  <div class="form-control">
+    <label class="form-control__label">{{ label }}</label>
+    <input
+      class="form-control__input"
+      [type]="type"
+      [placeholder]="palceholder"
+      [formControlName]="controlName"
+    />
+    <div class="form-control__errors">
+      <ng-content></ng-content>
+    </div>
+  </div>
 </ng-container>
